# simple-fastqc

./: README.md  pyproject.toml
src/simple_fastqc/: __init__.py  simple_fastqc.py
